# esp-agent

./: .gitignore  CMakeLists.txt  README.md  agent.md  cascadiacode_light_13.bdf  cascadiacode_light_14.bdf  changelog.md  iosevkacharonmono_light_13.bdf  partitions.csv  prompt.txt  sdkconfig.defaults  test_font_metrics.py  u8g2_font_cascadiacode_light_13.c  u8g2_font_cascadiacode_light_14.c  u8g2_font_iosevkacharonmono_light_13.c
main/: CMakeLists.txt  api.h.sample  config.h  config.h.example  main.c
main/actions/: action_complete.c  action_create.c  action_delete.c  action_detail.c  action_dispatcher.c  action_dispatcher.h  action_history.c  action_query.c  action_search.c  action_summary.c  action_undo.c  action_undo.h  action_update.c  query_engine.c  query_engine.h
main/cloud/: firebase_sync.c  firebase_sync.h
main/database/: task_database.c  task_database.h  vector_search.c  vector_search.h
main/display/: display_config.h  display_manager.c  display_manager.h  font4x6.h  font5x7.h  font6x8.h  ssd1306.c  ssd1306.h  u8g2_font_cascadiacode_light_11.c  u8g2_font_iosevkacharonmono_light_10.c  u8g2_font_iosevkacharonmono_light_11.c  u8g2_font_iosevkacharonmono_light_13.c  u8g2_font_iosevkacharonmono_light_9.c  vn_utils.c  vn_utils.h
main/openai/: openai_client.c  openai_client.h
main/scheduler/: reminder_scheduler.c  reminder_scheduler.h
main/telegram/: telegram_bot.c  telegram_bot.h
main/utils/: json_parser.c  json_parser.h  log_server.c  log_server.h  network_gatekeeper.c  network_gatekeeper.h  response_formatter.c  response_formatter.h  safe_append.h  time_utils.c  time_utils.h  token_tracker.c  (+1 more)
(+16 files in other folders)
